// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HostPodiumState > should render HostPodiumState 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content mediumWidth fullHeight startAlign"
    >
      <div
        class="typography subtitle full"
      >
        Podium
      </div>
      <div
        class="main"
      >
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              Radar
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              2
            </div>
            <div
              class="score"
            >
              18398
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowCyborg
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              1
            </div>
            <div
              class="score"
            >
              18456
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowWhirlwind
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              3
            </div>
            <div
              class="score"
            >
              15492
            </div>
          </div>
        </div>
      </div>
      <div
        class="main"
      >
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              4
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              WhiskerFox
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            14118
          </span>
        </div>
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              5
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              JollyNimbus
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            13463
          </span>
        </div>
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              6
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              PuddingPop
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            12459
          </span>
        </div>
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              7
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              MysticPine
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            11086
          </span>
        </div>
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              8
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              FrostyBear
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            10361
          </span>
        </div>
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              9
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              Willo
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            9360
          </span>
        </div>
        <div
          class="column"
        >
          <div
            class="position"
          >
            <span>
              10
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="row"
          >
            <span>
              ScarletFlame
            </span>
          </div>
        </div>
        <div
          class="column"
        >
          <span
            class="score"
          >
            6723
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`HostPodiumState > should render HostPodiumState without a full leaderboard 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="header"
    >
      <button
        class="logo"
      >
        <span
          class="icon"
        />
        <span
          class="text"
        >
          Quiz
        </span>
      </button>
      <div
        class="side"
      />
    </div>
    <div
      class="content mediumWidth fullHeight startAlign"
    >
      <div
        class="typography subtitle full"
      >
        Podium
      </div>
      <div
        class="main"
      >
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              Radar
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              2
            </div>
            <div
              class="score"
            >
              18398
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowCyborg
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              1
            </div>
            <div
              class="score"
            >
              18456
            </div>
          </div>
        </div>
        <div
          class="column"
        >
          <div
            class="spacer"
          />
          <div
            class="spacer"
          />
          <div
            class="nickname"
          >
            <div
              class="main"
            >
              ShadowWhirlwind
            </div>
          </div>
          <div
            class="stack"
          >
            <div
              class="position"
            >
              3
            </div>
            <div
              class="score"
            >
              15492
            </div>
          </div>
        </div>
      </div>
      <div
        class="main"
      />
    </div>
  </div>
</div>
`;
